--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -102,31 +102,31 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yong Il Jo Cho"
+  name             : "TechJo&Huh"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "This is Jo's journey"
+  bio              : "Free education platform for ALGORITHM and DATA ANALYSIS"
   location         : "iowa City"
   email            : "yongcho9788@gmail.com"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://ycho9788.github.io"
+      url: "https://techjoandhuh.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ycho9788"
+      url: "https://github.com/techjoandhuh"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/yongilmon/"
+      url: "https://www.instagram.com/techjoandhuh/"
 
 # Site Footer
 footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ycho9788"
+      url: "https://github.com/techjoandhuh"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/yongilmon/"
+      url: "https://www.instagram.com/techjoandhuh/"
 
 
 # Reading Files
