--- a/_config.yml
+++ b/_config.yml
@@ -238,6 +238,7 @@ jekyll-archives:
   enabled:
     - categories
     - tags
+    - category
   layouts:
     category: archive-taxonomy
     tag: archive-taxonomy
